[fix] add gaps on action buttons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,6 +59,13 @@ td {
   vertical-align: middle;
   font-size: var(--font-size);
 }
+
+tbody tr td:last-of-type {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
 #description {
   height: 38px;
 }
